k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - image: linuxserver/transmission
        imagePullPolicy: "Always"
        name: transmission
        ports:
        - containerPort: 9091
        - containerPort: 51413
        volumeMounts:
        - mountPath: /downloads
          name: downloads
        - mountPath: /watch
          name: watch
        - mountPath: /config
          name: config
      volumes:
      - name: downloads
        hostPath:
          path: /mnt/ursula/transmission-downloads
      - name: watch
        hostPath:
          path: /mnt/ursula/transmission-watch
      - name: config
        hostPath:
          path: /mnt/ursula/transmission-config
