k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  ingressClassName: nginx
  rules:
  - host: transmission.cdg.lan
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: transmission
            port:
              number: 80
